@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Always create the 00-load.t test in the munge file phase
+
 0.023  2017-09-24 16:18:25 UTC
 
   - Create the 00-load.t test
